--- a/google/styles.css
+++ b/google/styles.css
@@ -1,3 +1,75 @@
 body {
   /* rules go here */
 }
+
+.header{
+  background-color: #2d2d2d;
+  white-space: nowrap;
+  width: 100%;
+  height: 30px;
+  padding-top: 0px;
+}
+.header_contents{
+  margin-top: 0px;
+  color: #fff;
+  list-style: none;
+  display: block;
+  width: 670px;
+  float: left;
+
+
+
+}
+
+.header_contents li {
+  text-align: center;
+  float:left;
+  position:relative;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  margin-right: 15px;
+}
+
+.header_contents li:hover {
+  background-color: gray;
+  opacity: 50%;
+}
+
+.main_container{
+  text-align: center;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:150px;
+}
+
+.main_container .logo img{
+  height: 95px;
+  width: 275px;
+}
+
+.main_container .searchForm{
+  width: 550px;
+  height: 30px;
+}
+
+.main_container .searchForm{
+  border: 1px solid #ccc;
+}
+.main_container .searchForm:hover{
+  border: 1px solid #777;
+}
+
+.main_container .searchForm:active{
+  border: 1px solid rgb(182, 182, 243);
+}
+
+.main_container .searchButtons{
+  margin: 16px 8px;
+  padding:5px;
+  background-color: #f5f5f5;
+  background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
+  background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+  font: bold 11px/27px Arial,sans-serif;
+  border: 1px solid #dcdcdc;
+}
