--- a/basecamp/styles.css
+++ b/basecamp/styles.css
@@ -1,3 +1,166 @@
 body{
-  /* rules go here */
+  background-color: black;
 }
+
+h1 {
+  font-size: 46px;
+  text-align: center;
+}
+
+h2 {
+  color: red;
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+section.container{
+  width: 1000px;
+  height: 100%;
+  margin: 0 auto 20px;
+  background-color: white;
+}
+
+nav {
+  background-color: white;
+  width: 940px;
+  height: 72px;
+  padding: 20px 30px 10px 30px;
+  position: relative;
+  border-bottom: 1px solid #d4cdc1;
+}
+
+header.mainHeader{
+  padding: 40px 0 60px;
+  width: 800px;
+  margin: 5px auto 20px auto;
+  background-color: white;
+}
+
+.logo{
+  float: left;
+}
+
+.logo img{
+  height: 55px;
+  width: 194px;
+}
+
+.navList {
+  float: right;
+}
+ul.navList .listItems {
+  float: left;
+  position: relative;
+  list-style: none;
+  margin-right: 30px;
+  text-align: center;
+}
+
+section.drawing{
+  background-color: white;
+  border-bottom: 1px solid #d4cdc1;
+  position: relative;
+  overflow: hidden;
+  margin-top: -40px;
+}
+
+section figure.person{
+  float: left;
+  margin-left: -110px;
+  width: 383px;
+  height: 490px;
+  background: url("http://basecamp.com/assets/images/home-sign-up/joy.png") 25px 25px no-repeat;
+  background-size: 375px 465px;
+}
+
+.quote{
+  float: left;
+  width: 230px;
+  position: absolute;
+  margin-left: 60px;
+  margin-top: 50px;
+}
+
+.signup {
+  border: 4px solid black;
+  border-radius: 5px;
+  height: 465px;
+  width: 320px;
+  padding: 10px;
+  float: right;
+  margin-right: 20px;
+}
+
+.formHeader{
+  text-align: center;
+}
+
+.searchForm {
+  border-top: 1px solid #999;
+  border-radius: 3px;
+  height: 25px;
+  padding: 5px;
+  margin: 0 auto 15px auto;
+  width: 260px;
+  color: gray;
+  font-size: 15px;
+  text-align: left;
+}
+
+.signupButton {
+  color: white;
+  border-radius: 3px;
+  font-size: 13px;
+  font-weight: bold;
+  height: 42px;
+  padding: 0 10px;
+  background-color: #393;
+  width: auto;
+  display: inline;
+  margin-left: 50px;
+}
+
+.oval-thought-border {
+  position:relative; 
+  padding:70px 30px;
+  margin:1em auto 80px;
+  border:10px solid #c81e2b; 
+  text-align:center;
+  color:#333; 
+  background:#fff;
+  border-radius:240px / 140px;
+}
+
+/* creates the larger circle */
+.oval-thought-border:before {
+  content:""; 
+  position:absolute;
+  z-index:10;
+  bottom:-40px;
+  right:100px;
+  width:50px;
+  height:50px;
+  border:10px solid #c81e2b;
+  background:#fff;
+  /* css3 */
+  -webkit-border-radius:50px;
+}
+
+/* creates the smaller circle */
+.oval-thought-border:after {
+  content:""; 
+  position:absolute; 
+  z-index:10; 
+  bottom:-60px; 
+  right:50px; 
+  width:25px; 
+  height:25px; 
+  border:10px solid #c81e2b;
+  background:#fff;
+  /* css3 */
+  -webkit-border-radius:25px; 
+  border-radius:25px;
+ }
