--- a/google/styles.css
+++ b/google/styles.css
@@ -1,5 +1,5 @@
 body {
-  /* rules go here */
+  font: 13px/27px Arial,sans-serif;
 }
 
 .header{
@@ -8,16 +8,21 @@ body {
   width: 100%;
   height: 30px;
   padding-top: 0px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  cursor:pointer;
+  color: #bbb;
+  font-weight: bold;
+  font-family: arial,sans-serif;
 }
 .header_contents{
   margin-top: 0px;
-  color: #fff;
+  color: #eee;
   list-style: none;
   display: block;
   width: 670px;
   float: left;
-
-
 
 }
 
@@ -25,8 +30,7 @@ body {
   text-align: center;
   float:left;
   position:relative;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-bottom: 3px;
   margin-right: 15px;
 }
 
@@ -72,4 +76,8 @@ body {
   background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
   font: bold 11px/27px Arial,sans-serif;
   border: 1px solid #dcdcdc;
+}
+
+.announcment{
+  text-align: center;
 }
